<resources>

    <!-- Login -->
    <string name="app_name">MidTerm</string>
    <string name="name_hint_text">Name</string>
    <string name="password_hint_text">Password</string>
    <string name="login_text">Login</string>

    <!-- User Profile -->
    <string name="user_profile_change_photo">Change Profile Picture</string>
    <string name="user_profile_hint_name">Name</string>
    <string name="user_profile_hint_age">Age</string>
    <string name="user_profile_hint_phone">Phone Number</string>
    <string name="user_profile_save">Save</string>
    <string name="user_profile_updated">Profile updated!</string>
    <string name="user_profile_error_data_not_found">Error: User data not found.</string>
    <string name="user_profile_logout">Logout</string>


    <!-- Home -->
    <string name="home">Home</string>
    <string name="profile_button_description">User Profile</string>

    <!-- Add Student -->
    <string name="add_student">Add Student</string>

    <!-- Delete Student -->
    <string name="delete_student">Delete Student</string>

    <!-- Update Student -->
    <string name="update_student">Update Student</string>

    <!-- Search Student -->
    <string name="search_student">View &amp; Search Students</string>

    <!-- Student List -->
    <string name="student_list">Student List</string>
    <string name="search_hint">Search…</string>
    <string name="sort_name">Sort by Name</string>
    <string name="sort_id">Sort by ID</string>

    <!-- Data Exchange -->
    <string name="import_export">Import / Export Data</string>
    <string name="data_exchange">Data Exchange</string>
    <string name="student_data">Student Data</string>
    <string name="import_students">Import Students (CSV)</string>
    <string name="export_students">Export Students (CSV)</string>
    <string name="certificate_data">Certificate Data</string>
    <string name="import_certificates">Import Certificates (CSV)</string>
    <string name="export_certificates">Export Certificates (CSV)</string>

    <!-- Student Details -->
    <string name="student_details">Student Details &amp; Certificates</string>
    <string name="certificate_name">Certificate Name</string>
    <string name="date">Date</string>

    <string name="student_profile">Student Profile</string>
    <string name="name">Name: </string>
    <string name="id">ID: </string>
    <string name="cla_ss">Class: </string>
    <string name="certificates">Certificates</string>
    <string name="add">+ Add</string>

    <string name="edit_certificate">Edit Certificate</string>
    <string name="delete_certificate">Delete Certificate</string>

    <!-- System Users -->
    <string name="system_users">System Users</string>
    <string name="system_users_user_name">User Name</string>
    <string name="system_users_role">Role</string>
    <string name="system_users_phone">Phone</string>

    <!-- Login History -->
    <string name="login_history">Login History</string>
    <string name="login_user_name">user@example.com</string>
    <string name="login_status">Status:</string>
    <string name="login_success">Success</string>
    <string name="login_time">Time:</string>

    <string name="back">Back</string>


</resources>
