<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp">

        <!-- Profile Picture -->
        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:background="@drawable/circle_bg"
            android:padding="2dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_person" />

        <Button
            android:id="@+id/btnChangePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/user_profile_change_photo" />

        <!-- Info -->
        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:hint="@string/user_profile_hint_name"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/edtAge"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/user_profile_hint_age"
            android:importantForAutofill="no"
            android:inputType="number" />

        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/user_profile_hint_phone"
            android:importantForAutofill="no"
            android:inputType="phone" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/user_profile_save" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#D32F2F"
            android:text="@string/user_profile_logout" />

    </LinearLayout>

</ScrollView>
