<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="10dp">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@android:drawable/ic_menu_revert"
            android:contentDescription="@string/back" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_list"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <!-- Search Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <EditText
            android:id="@+id/edtSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:minHeight="48dp"
            android:hint="@string/search_hint" />

        <Spinner
            android:id="@+id/spinnerSearchCriteria"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_weight="1" />
    </LinearLayout>

    <!-- Sort Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/btnSortName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_name"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/btnSortId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_id" />
    </LinearLayout>

    <!-- The List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewStudents"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
