<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/tvHistoryEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_user_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#000"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_status"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tvHistoryStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_success"
                android:textStyle="bold"
                android:textColor="#4CAF50"
                android:layout_marginEnd="15dp"/>

            <TextView
                android:id="@+id/tvHistoryDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_time"
                android:textSize="14sp"
                android:textColor="#757575"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
