<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCertName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/certificate_name"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tvCertDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="14sp"
                android:textColor="#757575"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/btnEditCert"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@android:drawable/ic_menu_edit"
            android:background="?attr/selectableItemBackground"
            android:padding="12dp"
            android:contentDescription="@string/edit_certificate" />

        <ImageButton
            android:id="@+id/btnDeleteCert"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackground"
            android:padding="12dp"
            android:src="@android:drawable/ic_menu_delete"
            app:tint="#F44336"
            android:contentDescription="@string/delete_certificate" />


    </LinearLayout>
</androidx.cardview.widget.CardView>
