<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardAddStudent"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#4CE0D5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.173" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_student"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="#3F51B5"
        android:fontFamily="serif"
        android:gravity="center|start"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/home"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/circle_bg"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="16dp"

        app:srcCompat="@drawable/profile"
        android:contentDescription="@string/profile_button_description"

        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardDeleteStudent"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#FF6B6B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardAddStudent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/delete_student"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardUpdateStudent"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#FFCA28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardDeleteStudent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/update_student"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewStudents"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#9C27B0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardUpdateStudent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/search_student"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardDataExchange"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#607D8B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewStudents">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/import_export"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardStudentDetails"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#E91E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardDataExchange">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/student_details"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>